<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_margin="@dimen/padding_small"
              android:layout_width="match_parent"
              android:layout_height="@dimen/space_normal">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="@dimen/space_normal"
        android:layout_height="@dimen/space_normal"
        android:layout_margin="@dimen/padding_small"
        android:src="@drawable/ic_thumb_up"/>

    <TextView
        android:id="@+id/item_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/font_normal"/>


</LinearLayout>